test(backend): align unit tests with service, chart, and target-history changes